actions & content creations ai

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.70",
     "@octokit/rest": "^21.0.2",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-dialog": "^1.1.2",
@@ -20,13 +21,22 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
+    "ai": "^3.4.27",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "katex": "^0.16.11",
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
+    "next-mdx-remote": "^5.0.0",
     "openai": "^4.68.4",
+    "openai-edge": "^1.2.2",
+    "prismjs": "^1.29.0",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "rehype-katex": "^7.0.1",
+    "rehype-prism-plus": "^2.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
