--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -40,7 +40,7 @@ jobs:
             ${{ runner.os }}-nextjs-
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
 
       - name: Install Vercel CLI
         run: npm install -g vercel@latest
